Revert "Fixed compatibility with Java 1.8. Added dedicated profile to build targeting Java 1.8."